<resources>
    <string name="app_name">App Combustível</string>
    <string name="app_titulo">Tabela de Combustíveis</string>
    <string name="tv_numero_litros">N° de litros vendidos:</string>
    <string name="tv_preco_litros">Preço do litro:</string>
    <string name="tv_forma_pagamento">Forma de Pagamento:</string>
    <string name="tv_tipo_combustivel">Tipo de Combustível:</string>
    <string name="btnCalcular">Calcular</string>

    <string-array name="tiposCombustiveis">
        <item>Selecione</item>
        <item>Álcool</item>
        <item>Gasolina</item>
        <item>Diesel</item>
    </string-array>

    <string-array name="formasDePagamento">
        <item>Selecione</item>
        <item>Débito</item>
        <item>Crédito</item>
    </string-array>

</resources>