<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_weight="0.3"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:text="@string/tv_numero_litros"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtNumeroDeLitros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:inputType="numberDecimal"
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:text="@string/tv_preco_litros"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtPrecoDoLitro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:inputType="numberDecimal"
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />


            <LinearLayout
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:text="@string/tv_tipo_combustivel"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Spinner
                    android:scrollbarSize="@dimen/material_emphasis_medium"
                    android:id="@+id/spinnerTiposDeCombustiveis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/tiposCombustiveis"
                    android:padding="8dp"
                    android:textAlignment="center"
                    tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />


            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:text="@string/tv_forma_pagamento"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spinnerFormasDePagamento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/formasDePagamento"
                    android:padding="8dp"
                    android:textAlignment="center"
                    tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/btnCalcular"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="2"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="8dp"
                android:id="@+id/tv_valorASerPago"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Valor à ser pago:"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_resposta"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="15dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                android:visibility="gone" />


        </LinearLayout>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>